    * 1405 Checkbox for settings downtimes on the hosts of the selected services...
    * 1410 Output log text of scheduled downtime log entries...
    * 1411 New builting views for the history of scheduled downtimes
    * 1185 mobile ui: Added a new view to see events from the Event Console
    * 1412 Speed up of displaying and sorting after WATO folder path
    * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...
    * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception
    * 1154 FIX: Availability: Fixed unwanted redirect to edit annotation page after editing availability options...
    * 1401 FIX: Display options in views are now again persistent...
    * 1120 FIX: Multisite filters Host/Service Contactgroup: Fixed livestatus exception...
    * 1158 FIX: Moved filter logic to visuals module...
            NOTE: Please refer to the migration notes!
    * 1077 FIX: Fixed labelling of Y achsis in prediction graphs...
    * 1162 FIX: User profiles can not be edited on WATO remote sites anymore...

    WATO:
    * 1096 New WATO web service: manage hosts via a new HTTP API...
    * 1155 NagVis map edit/view permissions can now be set using roles/groups...
    * 1115 Renamed rule: Hosts using SNMP v2c -> Legacy SNMP devices using SNMP v2c...
    * 1404 Make title/help of custom user attributes localizable...
    * 1159 Remote BI Aggregations can now be configured to be checked as single services...
    * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...
    * 1089 FIX: Snapshot restore: fixed exception during exception handling......
    * 1091 FIX: logwatch patterns: allow unicode text in pattern comment
    * 1092 FIX: logwatch: now able to enter unicode text into the "Pattern (Regex)" field
    * 0191 FIX: Added swp files to the ignore list for the WATO git feature...
    * 1153 FIX: Changed custom user attributes can now be used immediately...