@@ -135,6 +135,7 @@
     * 1411 New builting views for the history of scheduled downtimes
     * 1185 mobile ui: Added a new view to see events from the Event Console
     * 1412 Speed up of displaying and sorting after WATO folder path
+    * 1477 New screenshot mode for Multisite...
     * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...
     * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception
     * 1154 FIX: Availability: Fixed unwanted redirect to edit annotation page after editing availability options...
